issue-1052: fix text-alignment for numeric table cells

--- a/src/components/mdTable/mdTable.scss
+++ b/src/components/mdTable/mdTable.scss
@@ -157,7 +157,7 @@
 
       .md-table-cell-container {
         display: flex;
-        justify-content: center;
+        justify-content: flex-end;
         align-items: center;
 
         .md-icon,
